# mini_cAR_client

./: .gitignore  Dockerfile  README.md  pyproject.toml
client/: capture.py  config.py  main.py  model.py  movement.py  singleton.py  test.py
client/weight/: cp-0004.ckpt.index  cp-0009.ckpt.index  cp-0010.ckpt.index  my2.index  myweight.index
