[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["twinszs <dongwoo5271@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
client = "client.main:_asyncio"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
opencv-python = "^4.6.0.66"
python-dotenv = "^0.21.0"
boto3 = "^1.26.22"
requests = "^2.28.1"
tensorflow = "2.10"
scikit-learn = "^1.1.3"
asyncio-dgram = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
